--- a/CSS/style.css
+++ b/CSS/style.css
@@ -186,3 +186,75 @@ header{
 .lixos_tipo p{
     font-size: 0.85rem;
 }
+
+/*   MAIORES PRODUTORES   */
+.produt_lixo{
+    margin-top: 10rem;
+}
+.produt_lixo_container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+}
+
+.produtores{
+    background: var(--color-bg1);
+    text-align: center;
+    border: 1px solid transparent;
+    transition: var(--transition);
+}
+
+.produtores:hover{
+    background: transparent;
+    border-color: var(--color-primary);
+}
+
+.produtores_info{
+    padding: 2rem;
+}
+
+.produtores_info p{
+    margin: 1.2rem 0 2rem;
+    font-size: 0.9rem;
+}
+
+/*   Perguntas Frequentes   */
+.faqs{
+    background: var(--color-bg1);
+    box-shadow: inset 0 0 3rem rgba(0, 0, 0, 0.5);
+}
+
+.faqs_container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+}
+
+.faq{
+    padding: 2rem;
+    display: flex;
+    align-items: center;
+    gap: 1.4rem;
+    height: fit-content;
+    background: var(--color-primary);
+    cursor: pointer;
+}
+
+.faq h4{
+    font-size: 1rem;
+    line-height: 2.2;
+}
+
+.faq_icon{
+    align-self: flex-start;
+    font-size: 1.2rem;
+}
+
+.faq p{
+    margin-top: 0.8rem;
+    display: none;
+}
+
+.faq .open p{
+    display: block;
+}
