--- a/CSS/style.css
+++ b/CSS/style.css
@@ -218,43 +218,13 @@ header{
     font-size: 0.9rem;
 }
 
-/*   Perguntas Frequentes   */
-.faqs{
-    background: var(--color-bg1);
-    box-shadow: inset 0 0 3rem rgba(0, 0, 0, 0.5);
-}
+/*   RESUMO ESG E PROJETO   */
 
-.faqs_container{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 1rem;
-}
-
-.faq{
-    padding: 2rem;
+.centralizado {
     display: flex;
+    justify-content: center;
     align-items: center;
-    gap: 1.4rem;
-    height: fit-content;
-    background: var(--color-primary);
-    cursor: pointer;
-}
-
-.faq h4{
-    font-size: 1rem;
-    line-height: 2.2;
-}
-
-.faq_icon{
-    align-self: flex-start;
-    font-size: 1.2rem;
-}
-
-.faq p{
-    margin-top: 0.8rem;
-    display: none;
-}
-
-.faq .open p{
-    display: block;
+    height: 50vh; /* Ajusta a altura para ocupar a tela inteira */
+    text-align: center;
+    font-family: Arial, sans-serif;
 }
