--- a/CSS/style.css
+++ b/CSS/style.css
@@ -304,7 +304,7 @@ header{
 .faq-question {
     width: 100%;
     padding: 15px;
-    background: var(--color-primary);
+    background: var(--color-bg3);
     border: none;
     text-align: left;
     font-size: 18px;
